chore(refactor): Marked all TODOs as DONE after implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
 <resources>
 
-    <!--  TODO: Provide a suitable application name  -->
+    <!--  DONE: Provide a suitable application name  -->
 
     <string name="app_name" translatable="false">Zodiac Explorer</string>
     <string name="accessibility_navigation_refresh_screen_content">Refresh screen content</string>
